更新模型名称以及介绍

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -805,5 +805,6 @@
   "Search the web": "Im Internet suchen",
   "search": "Suche",
   "Web Search": "Websuche",
-  "Web Searching ...": "Websuche läuft ..."
+  "Web Searching ...": "Websuche läuft ...",
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Denken Sie tief und erreichen Sie in Aufgaben wie Mathematik und kreativer Schriftstellerei die gleiche Leistung wie o3"
 }
