--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -804,6 +804,7 @@
   "Search the web": "",
   "search": "",
   "Web Search": "",
-  "Web Searching ...": ""
+  "Web Searching ...": "",
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": ""
 }
 
