--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -804,5 +804,6 @@
   "Search the web": "Buscar en la web",
   "search": "buscar",
   "Web Search": "Búsqueda web",
-  "Web Searching ...": "Buscando en la web ..."
+  "Web Searching ...": "Buscando en la web ...",
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Piensa profundamente y alcanza un rendimiento similar al de o3 en tareas como matemáticas y escritura creativa"
 }
