--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -803,5 +803,6 @@
   "Search the web": "Rechercher sur le web",
   "search": "recherche",
   "Web Search": "Recherche sur le web",
-  "Web Searching ...": "Recherche en cours sur le web ..."
+  "Web Searching ...": "Recherche en cours sur le web ...",
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Réfléchissez profondément et égalisez les performances d'o3 dans des tâches telles que les mathématiques et l'écriture créative"
 }
