--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -804,5 +804,6 @@
   "Search the web": "Cari di web",
   "search": "cari",
   "Web Search": "Pencarian web",
-  "Web Searching ...": "Sedang melakukan pencarian web ..."
+  "Web Searching ...": "Sedang melakukan pencarian web ...",
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Pikirkan secara mendalam dan cocokkan kinerja o3 dalam tugas seperti matematika dan penulisan kreatif"
 }
