--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -804,5 +804,6 @@
   "Search the web": "ウェブで検索する",
   "search": "検索",
   "Web Search": "ウェブ検索",
-  "Web Searching ...": "ウェブ検索中..."
+  "Web Searching ...": "ウェブ検索中...",
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "深く考え、数学や創作的な文章執筆などのタスクにおいて o3 のパフォーマンスに匹敵する成果を出す"
 }
