--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -804,5 +804,6 @@
   "Search the web": "Pesquisar na web",
   "search": "pesquisar",
   "Web Search": "Pesquisa na web",
-  "Web Searching ...": "Pesquisando na web ..."
+  "Web Searching ...": "Pesquisando na web ...",
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Pense profundamente e iguale o desempenho do o3 em tarefas como matemática e escrita criativa"
 }
