--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -803,5 +803,6 @@
   "Search the web": "Поиск в интернете",
   "search": "поиск",
   "Web Search": "Поиск в интернете",
-  "Web Searching ...": "Выполняется поиск в интернете ..."
+  "Web Searching ...": "Выполняется поиск в интернете ...",
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Думайте глубоко и достигайте такого же уровня выполнения, как o3, в таких задачах, как математика и креативная писательство"
 }
