--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -803,5 +803,6 @@
   "Search the web": "ค้นหาในเว็บ",
   "search": "ค้นหา",
   "Web Search": "การค้นหาเว็บ",
-  "Web Searching ...": "กำลังค้นหาเว็บ ..."
+  "Web Searching ...": "กำลังค้นหาเว็บ ...",
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "คิดอย่างลึกซึ้งและให้ประสิทธิภาพเท่ากับ o3 ในการทำงานเช่น คณิตศาสตร์ และการเขียนสร้างสรรค์"
 }
