--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -793,5 +793,6 @@
   "Search the web": "Tìm kiếm trên web",
   "search": "tìm kiếm",
   "Web Search": "Tìm kiếm trên web",
-  "Web Searching ...": "Đang tìm kiếm trên web ..."
+  "Web Searching ...": "Đang tìm kiếm trên web ...",
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Hãy suy nghĩ sâu sắc và đạt hiệu suất tương đương với o3 trong các nhiệm vụ như toán học và viết sáng tạo"
 }
