--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -804,5 +804,6 @@
   "Search the web": "Web'de Ara",
   "search": "arama",
   "Web Search": "Web araması",
-  "Web Searching ...": "Web'de aranıyor ..."
+  "Web Searching ...": "Web'de aranıyor ...",
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Derin düşünceler yapın ve matematik ve yaratıcı yazma gibi görevlerde o3'ün performansına ulaşın"
 }
