--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -807,6 +807,9 @@
   "search": "",
   "Web Search": "",
   "Web Searching ...": "",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": ""
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "",
+  "KYC verification is limited to once every 10 minutes, Please try again later.": "",
+  "A single IP address can be used for a maximum of two KYC verifications": "",
+  "Check kyc failed, Please try again.": ""
 }
 
