--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -807,5 +807,8 @@
   "search": "buscar",
   "Web Search": "Búsqueda web",
   "Web Searching ...": "Buscando en la web ...",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Piensa profundamente y alcanza un rendimiento similar al de o3 en tareas como matemáticas y escritura creativa"
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Piensa profundamente y alcanza un rendimiento similar al de o3 en tareas como matemáticas y escritura creativa",
+  "KYC verification is limited to once every 10 minutes, Please try again later.": "La verificación KYC está limitada a una vez cada 10 minutos. Por favor, inténtelo de nuevo más tarde.",
+  "A single IP address can be used for a maximum of two KYC verifications": "Una sola dirección IP se puede utilizar un máximo de dos veces para las verificaciones KYC.",
+  "Check kyc failed, Please try again.": "La verificación KYC ha fallado. Por favor, inténtelo de nuevo."
 }
