--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -807,5 +807,8 @@
   "search": "검색",
   "Web Search": "웹 검색",
   "Web Searching ...": "웹 검색 중...",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "심층적으로 생각하고 수학 및 창작 글쓰기와 같은 작업에서 o3의 성과에 맞먹을 수 있도록 하기"
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "심층적으로 생각하고 수학 및 창작 글쓰기와 같은 작업에서 o3의 성과에 맞먹을 수 있도록 하기",
+  "KYC verification is limited to once every 10 minutes, Please try again later.": "KYC 인증은 10분에 한 번으로 제한됩니다, 나중에 다시 시도해 주세요.",
+  "A single IP address can be used for a maximum of two KYC verifications": "단일 IP 주소는 최대 두 번의 KYC 인증에 사용할 수 있습니다.",
+  "Check kyc failed, Please try again.": "KYC 인증에 실패했습니다. 다시 시도해 주세요."
 }
