--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -141,6 +141,7 @@
   "Copying to clipboard was successful!": "",
   "Create": "",
   "Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "",
+  "Create a concise 3-10 word phrase as a search keyword for the following query, strictly adhering to the 3-10 word limit:": "",
   "Create a modelfile": "",
   "Create Account": "",
   "Create new key": "",
