--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -140,7 +140,8 @@
   "Copy Link": "링크 복사",
   "Copying to clipboard was successful!": "클립보드로 복사가 성공했습니다!",
   "Create": "생성",
-  "Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "다음 질문의 헤더로 3 - 5 단어로 구성된 간결한 구문을 생성하며, '제목'이라는 단어를 사용하지 않고 3 - 5 단어 제한을 엄격히 따릅니다:",
+  "Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "다음 질문의 헤더로 3-5 단어로 구성된 간결한 구문을 생성하며, '제목'이라는 단어를 사용하지 않고 3-5 단어 제한을 엄격히 따릅니다:",
+  "Create a concise 3-10 word phrase as a search keyword for the following query, strictly adhering to the 3-10 word limit:": "다음 쿼리에 대해 3-10단어의 간결한 구를 검색 키워드로 만들어 주세요. 3-10단어 제한을 엄격히 지켜주세요:",
   "Create a modelfile": "모델 파일 생성",
   "Create Account": "계정 생성",
   "Create new key": "새로운 키 생성",
