--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -141,6 +141,7 @@
   "Copying to clipboard was successful!": "A cópia para a área de transferência foi bem-sucedida!",
   "Create": "Criar",
   "Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "Criar uma frase concisa de 3 - 5 palavras como cabeçalho para a seguinte consulta, seguindo estritamente o limite de 3 - 5 palavras e evitando o uso da palavra 'título':",
+  "Create a concise 3-10 word phrase as a search keyword for the following query, strictly adhering to the 3-10 word limit:": "Crie uma frase concisa de 3-10 palavras como palavra - chave para a seguinte consulta, respeitando estritamente o limite de 3-10 palavras:",
   "Create a modelfile": "Criar um arquivo de modelo",
   "Create Account": "Criar uma conta",
   "Create new key": "Criar uma nova chave",
