--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -141,6 +141,7 @@
   "Copying to clipboard was successful!": "La copie dans le presse-papiers a réussi!",
   "Create": "Créer",
   "Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "Créer une phrase concise de 3 - 5 mots comme en-tête pour la requête suivante, en respectant strictement la limite de 3 - 5 mots et en évitant d'utiliser le mot 'titre':",
+  "Create a concise 3-10 word phrase as a search keyword for the following query, strictly adhering to the 3-10 word limit:": "Créez une phrase concise de 3-10 mots comme mot - clé pour la requête suivante, en respectant strictement la limite de 3-10 mots:",
   "Create a modelfile": "Créer un fichier de modèle",
   "Create Account": "Créer un compte",
   "Create new key": "Créer une nouvelle clé",
