--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -141,7 +141,8 @@
   "Copy Link": "リンクをコピーする",
   "Copying to clipboard was successful!": "クリップボードへのコピーが成功しました！",
   "Create": "作成する",
-  "Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "以下のクエリのヘッダーとして、厳密に 3～5 語の制限を守り、' タイトル ' という言葉の使用を避けて、簡潔な 3～5 語のフレーズを作成してください",
+  "Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "以下のクエリのヘッダーとして、厳密に 3-5 語の制限を守り、' タイトル ' という言葉の使用を避けて、簡潔な 3-5 語のフレーズを作成してください",
+  "Create a concise 3-10 word phrase as a search keyword for the following query, strictly adhering to the 3-10 word limit:": "次のクエリに対して、3-10 語の簡潔なフレーズを検索キーワードとして作成し、3-10 語の制限を厳守してください:",
   "Create a modelfile": "モデルファイルを作成する",
   "Create Account": "アカウントを作成する",
   "Create new key": "新しいキーを作成する",
