--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -141,6 +141,7 @@
   "Copying to clipboard was successful!": "คัดลอกไปยังคลิปบอร์ดสำเร็จ!",
   "Create": "สร้าง",
   "Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "สร้างคำหรือวลีที่สั้นๆ 3 - 5 คำเป็นหัวข้อสำหรับคำถามต่อไปโดยยึดติดตามขีดจำกัด 3 - 5 คำและหลีกเลี่ยงการใช้คำ 'title':",
+  "Create a concise 3-10 word phrase as a search keyword for the following query, strictly adhering to the 3-10 word limit:": "สร้าง구hrase สั้นๆ มี 3-10 คำ เป็นคำค้นสำหรับคำขอที่ตามมา ระบุจำนวนคำอย่างเคร่งครัดในช่วง 3-10 คำ:",
   "Create a modelfile": "สร้างไฟล์โมเดล",
   "Create Account": "สร้างบัญชี",
   "Create new key": "สร้างคีย์ใหม่",
