--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -132,6 +132,7 @@
   "Copying to clipboard was successful!": "复制到剪贴板成功！",
   "Create": "创建",
   "Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "为以下查询创建一个简洁的、3 - 5 个单词的短语作为标题，严格遵守 3 - 5 个单词的限制，且避免使用 'title' 这个词：",
+  "Create a concise 3-10 word phrase as a search keyword for the following query, strictly adhering to the 3-10 word limit:": "为以下查询创建一个简洁的、3-10 个单词的短语作为搜索关键字，严格遵守 3-10 个单词的限制：",
   "Create a modelfile": "创建一个模型文件",
   "Create Account": "创建账户",
   "Create new key": "创建新密钥",
