更新 分类 搜索

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -807,7 +807,8 @@
   "Last for {{ time }} seconds": "Dauert {{ time }} Sekunden lang",
   "Search the web": "Im Internet suchen",
   "search": "Suche",
-  "Web Search": "Websuche",
+  "Web Search": "Web suche",
+  "YouTube Search": "YouTube suche",
   "Web Searching ...": "Websuche läuft ...",
   "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Denken Sie tief und erreichen Sie in Aufgaben wie Mathematik und kreativer Schriftstellerei die gleiche Leistung wie o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "Die KYC-Verifizierung ist auf einmal alle 10 Minuten beschränkt. Bitte versuchen Sie es später erneut.",
