--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -807,6 +807,7 @@
   "Search the web": "",
   "search": "",
   "Web Search": "",
+  "YouTube Search": "",
   "Web Searching ...": "",
   "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "",
