--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -807,6 +807,7 @@
   "Search the web": "Cari di web",
   "search": "cari",
   "Web Search": "Pencarian web",
+  "YouTube Search": "Pencarian YouTube",
   "Web Searching ...": "Sedang melakukan pencarian web ...",
   "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Pikirkan secara mendalam dan cocokkan kinerja o3 dalam tugas seperti matematika dan penulisan kreatif",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "Verifikasi KYC dibatasi hanya boleh dilakukan sekali setiap 10 menit. Silakan coba lagi nanti.",
