--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -807,6 +807,7 @@
   "Search the web": "ウェブで検索する",
   "search": "検索",
   "Web Search": "ウェブ検索",
+  "YouTube Search": "YouTube 検索",
   "Web Searching ...": "ウェブ検索中...",
   "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "深く考え、数学や創作的な文章執筆などのタスクにおいて o3 のパフォーマンスに匹敵する成果を出す",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "KYC 認証は 10 分に 1 回までに制限されています，後でもう一度お試しください。",
