--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -807,6 +807,7 @@
   "Search the web": "Pesquisar na web",
   "search": "pesquisar",
   "Web Search": "Pesquisa na web",
+  "YouTube Search": "Pesquisa na YouTube",
   "Web Searching ...": "Pesquisando na web ...",
   "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Pense profundamente e iguale o desempenho do o3 em tarefas como matemática e escrita criativa",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "A verificação KYC é limitada a uma vez a cada 10 minutos. Por favor tente novamente mais tarde.",
