--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -806,6 +806,7 @@
   "Search the web": "ค้นหาในเว็บ",
   "search": "ค้นหา",
   "Web Search": "การค้นหาเว็บ",
+  "YouTube Search": "การค้นหาใน YouTube",
   "Web Searching ...": "กำลังค้นหาเว็บ ...",
   "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "คิดอย่างลึกซึ้งและให้ประสิทธิภาพเท่ากับ o3 ในการทำงานเช่น คณิตศาสตร์ และการเขียนสร้างสรรค์",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "การยืนยัน KYC จำกัดให้ทำได้เพียงครั้งเดียว ทุกๆ 10 นาที โปรดลองอีกครั้งในภายหลัง",
