--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -806,6 +806,7 @@
   "Search the web": "搜索网页",
   "search": "搜索",
   "Web Search": "网络搜索",
+  "YouTube Search": "YouTube 搜索",
   "Web Searching ...": "正在进行网络搜索...",
   "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "深度思考，在数学、创意写作等任务性能上比肩o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "KYC 认证每 10 分钟只能进行一次。请稍后再试。",
