--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -807,6 +807,7 @@
   "Search the web": "웹에서 검색하다",
   "search": "검색",
   "Web Search": "웹 검색",
+  "YouTube Search": "YouTube 검색",
   "Web Searching ...": "웹 검색 중...",
   "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "심층적으로 생각하고 수학 및 창작 글쓰기와 같은 작업에서 o3의 성과에 맞먹을 수 있도록 하기",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "KYC 인증은 10분에 한 번으로 제한됩니다, 나중에 다시 시도해 주세요.",
