--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -806,6 +806,7 @@
   "Search the web": "Поиск в интернете",
   "search": "поиск",
   "Web Search": "Поиск в интернете",
+  "YouTube Search": "поиск на YouTube",
   "Web Searching ...": "Выполняется поиск в интернете ...",
   "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Думайте глубоко и достигайте такого же уровня выполнения, как o3, в таких задачах, как математика и креативная писательство",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "Верификация KYC ограничена одной процедурой каждые 10 минут, Пожалуйста, попробуйте еще раз позже.",
