--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -807,6 +807,7 @@
   "Search the web": "Web'de Ara",
   "search": "arama",
   "Web Search": "Web araması",
+  "YouTube Search": "YouTube araması",
   "Web Searching ...": "Web'de aranıyor ...",
   "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Derin düşünceler yapın ve matematik ve yaratıcı yazma gibi görevlerde o3'ün performansına ulaşın",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "KYC doğrulaması her 10 dakikada bir kez yapılabilir, Lütfen daha sonra tekrar deneyin.",
