更新提示语

--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -808,6 +808,7 @@
   "search": "",
   "Web Search": "",
   "YouTube Search": "",
+  "Twitter Search": "",
   "Web Searching ...": "",
   "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "",
