--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -808,6 +808,7 @@
   "search": "buscar",
   "Web Search": "Búsqueda web",
   "YouTube Search": "Búsqueda YouTube",
+  "Twitter Search": "Búsqueda Twitter",
   "Web Searching ...": "Buscando en la web ...",
   "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Piensa profundamente y alcanza un rendimiento similar al de o3 en tareas como matemáticas y escritura creativa",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "La verificación KYC está limitada a una vez cada 10 minutos. Por favor, inténtelo de nuevo más tarde.",
