--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -807,6 +807,7 @@
   "search": "recherche",
   "Web Search": "Recherche sur le web",
   "YouTube Search": "Recherche sur le YouTube",
+  "Twitter Search": "Recherche sur le Twitter",
   "Web Searching ...": "Recherche en cours sur le web ...",
   "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Réfléchissez profondément et égalisez les performances d'o3 dans des tâches telles que les mathématiques et l'écriture créative",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "La vérification KYC est limitée à une fois toutes les 10 minutes. Veuillez réessayer plus tard.",
