--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -797,6 +797,7 @@
   "search": "tìm kiếm",
   "Web Search": "Tìm kiếm trên web",
   "YouTube Search": "Tìm kiếm trên YouTube",
+  "Twitter Search": "Tìm kiếm trên Twitter",
   "Web Searching ...": "Đang tìm kiếm trên web ...",
   "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Hãy suy nghĩ sâu sắc và đạt hiệu suất tương đương với o3 trong các nhiệm vụ như toán học và viết sáng tạo",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "Xác minh KYC chỉ được thực hiện một lần mỗi 10 phút, Vui lòng thử lại sau.",
