更新获取 聊天关键字

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -815,5 +815,6 @@
   "KYC verification is limited to once every 10 minutes, Please try again later.": "Die KYC-Verifizierung ist auf einmal alle 10 Minuten beschränkt. Bitte versuchen Sie es später erneut.",
   "A single IP address can be used for a maximum of two KYC verifications": "Eine einzelne IP-Adresse kann maximal zweimal für die KYC-Verifizierung verwendet werden.",
   "Check kyc failed, Please try again.": "Die KYC-Prüfung ist fehlgeschlagen. Bitte versuchen Sie es erneut.",
-  "One email can only be used for KYC verification once": "Eine E-Mail-Adresse kann nur einmal für die KYC-Verifizierung verwendet werden"
+  "One email can only be used for KYC verification once": "Eine E-Mail-Adresse kann nur einmal für die KYC-Verifizierung verwendet werden",
+  "Obtain what the content of the last question in the above questions is about, and only output the content": "Ermitteln, worum es inhaltlich bei der letzten Frage in den obigen Fragen geht und geben Sie nur den Inhalt aus"
 }
