--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -814,6 +814,7 @@
   "KYC verification is limited to once every 10 minutes, Please try again later.": "",
   "A single IP address can be used for a maximum of two KYC verifications": "",
   "Check kyc failed, Please try again.": "",
-  "One email can only be used for KYC verification once": ""
+  "One email can only be used for KYC verification once": "",
+  "Obtain what the content of the last question in the above questions is about, and only output the content": ""
 }
 
