--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -814,5 +814,6 @@
   "KYC verification is limited to once every 10 minutes, Please try again later.": "Verifikasi KYC dibatasi hanya boleh dilakukan sekali setiap 10 menit. Silakan coba lagi nanti.",
   "A single IP address can be used for a maximum of two KYC verifications": "Sebuah alamat IP tunggal dapat digunakan maksimal untuk dua kali verifikasi KYC.",
   "Check kyc failed, Please try again.": "Verifikasi KYC gagal. Silakan coba lagi.",
-  "One email can only be used for KYC verification once": "Satu alamat email hanya dapat digunakan sekali untuk verifikasi KYC"
+  "One email can only be used for KYC verification once": "Satu alamat email hanya dapat digunakan sekali untuk verifikasi KYC",
+  "Obtain what the content of the last question in the above questions is about, and only output the content": "Tentukan tentang apa isi pertanyaan terakhir dalam pertanyaan di atas, dan hanya keluarkan isinya"
 }
