--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -814,5 +814,6 @@
   "KYC verification is limited to once every 10 minutes, Please try again later.": "KYC 認証は 10 分に 1 回までに制限されています，後でもう一度お試しください。",
   "A single IP address can be used for a maximum of two KYC verifications": "単一の IP アドレスは、最大で 2 回の KYC 認証に使用できます。",
   "Check kyc failed, Please try again.": "KYC 認証に失敗しました。もう一度試してください。",
-  "One email can only be used for KYC verification once": "1 つのメールアドレスは KYC 認証に 1 回しか使用できません"
+  "One email can only be used for KYC verification once": "1 つのメールアドレスは KYC 認証に 1 回しか使用できません",
+  "Obtain what the content of the last question in the above questions is about, and only output the content": "上記の質問の中で最後の質問の内容が何に関するものかを把握し、内容のみを出力してください"
 }
