--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -813,5 +813,6 @@
   "KYC verification is limited to once every 10 minutes, Please try again later.": "การยืนยัน KYC จำกัดให้ทำได้เพียงครั้งเดียว ทุกๆ 10 นาที โปรดลองอีกครั้งในภายหลัง",
   "A single IP address can be used for a maximum of two KYC verifications": "ที่อยู่ IP เดียวสามารถใช้สำหรับการยืนยัน KYC ได้สูงสุดสองครั้ง",
   "Check kyc failed, Please try again.": "การยืนยัน KYC ล้มเหลว โปรดลองอีกครั้ง",
-  "One email can only be used for KYC verification once": "ที่อยู่อีเมล์หนึ่งสามารถใช้สำหรับการยืนยัน KYC ได้เพียงครั้งเดียวเท่านั้น"
+  "One email can only be used for KYC verification once": "ที่อยู่อีเมล์หนึ่งสามารถใช้สำหรับการยืนยัน KYC ได้เพียงครั้งเดียวเท่านั้น",
+  "Obtain what the content of the last question in the above questions is about, and only output the content": "ระบุว่าข้อความของคำถามครั้งสุดท้ายในคำถามข้างต้นเกี่ยวกับอะไร และแสดงเฉพาะข้อความเท่านั้น"
 }
