--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -803,5 +803,6 @@
   "KYC verification is limited to once every 10 minutes, Please try again later.": "Xác minh KYC chỉ được thực hiện một lần mỗi 10 phút, Vui lòng thử lại sau.",
   "A single IP address can be used for a maximum of two KYC verifications": "Một địa chỉ IP duy nhất có thể được sử dụng tối đa hai lần cho việc xác minh KYC.",
   "Check kyc failed, Please try again.": "Xác minh KYC đã thất bại. Vui lòng thử lại.",
-  "One email can only be used for KYC verification once": "Một địa chỉ email chỉ có thể được sử dụng một lần cho việc xác minh KYC"
+  "One email can only be used for KYC verification once": "Một địa chỉ email chỉ có thể được sử dụng một lần cho việc xác minh KYC",
+  "Obtain what the content of the last question in the above questions is about, and only output the content": "Xác định nội dung của câu hỏi cuối cùng trong các câu hỏi trên là về điều gì, và chỉ xuất nội dung"
 }
